2021-06-11  Robert Jenner  <jenner@apple.com>

        [LayoutTests] Delete unused LayoutTests/html5lib resources
        https://bugs.webkit.org/show_bug.cgi?id=226833

        Reviewed by Jonathan Bedard.

        * html5lib/resources/isindex.dat: Removed.
        * html5lib/resources/scripted/ark.dat: Removed.

2021-06-11  Robert Jenner  <jenner@apple.com>

        [LayoutTests] Delete unused LayoutTests/loader resources
        https://bugs.webkit.org/show_bug.cgi?id=226835

        Reviewed by Jonathan Bedard.

        * loader/navigation-policy/should-open-external-urls/resources/main-frame-with-subframe-click-targets-subframe.html: Removed.

2021-06-11  Robert Jenner  <jenner@apple.com>

        [LayoutTests] Delete unused LayoutTests/webaudio resources
        https://bugs.webkit.org/show_bug.cgi?id=226843

        Reviewed by Jonathan Bedard.

        * webaudio/resources/convolution-testing.js: Removed.
        * webaudio/resources/javascriptaudionode-testing.js: Removed.
        * webaudio/resources/note-grain-on-testing.js: Removed.
        * webaudio/resources/scriptprocessornode-testing.js: Removed.

2021-06-11  Robert Jenner  <jenner@apple.com>

        [LayoutTests] Delete unused LayoutTests/tiled-drawing resources
        https://bugs.webkit.org/show_bug.cgi?id=226842

        Reviewed by Jonathan Bedard.

        * tiled-drawing/resources/green.png: Removed.

2021-06-11  Robert Jenner  <jenner@apple.com>

        [LayoutTests] Delete unused LayoutTests/security resources
        https://bugs.webkit.org/show_bug.cgi?id=226839

        Reviewed by Jonathan Bedard.

        * security/resources/worker-isSecureContext-disabled.js: Removed.

2021-06-11  Robert Jenner  <jenner@apple.com>

        N[LayoutTests] Delete unused LayoutTests/media resources
        https://bugs.webkit.org/show_bug.cgi?id=226836

        Reviewed by Jonathan Bedard.

        * media/track/opera/resources/media/sunflower.mp4: Removed.